--- a/_includes/manifesto.html
+++ b/_includes/manifesto.html
@@ -1,6 +1,10 @@
 <h1>Manifesto for Agile Software Development</h1>
 <br><br><br>
 
+<center>
+    <br><br><br><br>
+
+
 <p>
 
     <font size="+2">
@@ -63,3 +67,17 @@
     but only in its entirety through this notice.
 
 </font>
+
+
+
+    <br><br>
+    <font size="+2">
+        <a href=principles.html>Twelve Principles of Agile Software</a><br><br>
+        <a href=/display/index.html>View Signatories</a><br><br>
+        <a href=/authors.html>About the Authors</a><br>
+        <a href=/history.html>About the Manifesto</a><br>
+
+    </font>
+    <br><br>
+
+</center>
