--- a/_includes/manifesto.html
+++ b/_includes/manifesto.html
@@ -1,6 +1,13 @@
 <h1>Manifesto for Agile Software Development</h1>
 <br><br><br>
 
+<table>
+    <tr>
+        <td>Hi</td>
+        <td>There</td>
+    </tr>
+</table>
+
 <center>
     <br><br><br><br>
 
@@ -27,8 +34,8 @@
         the right, we value the items on the left more.<br>
 
     </font>
-    <br><br><br><br>
 
+    <br><br><br><br>
 <table cellpadding=15><tr align=center valign=top>
     <td><font size="+2">
     <td><font size="+2">
