--- a/_includes/manifesto.html
+++ b/_includes/manifesto.html
@@ -1,14 +1,8 @@
-<h1>Manifesto for Agile Software Development</h1>
+<center>
+    <h1>Manifesto for Agile Software Development</h1>
 <br><br><br>
 
-<table>
-    <tr>
-        <td>Hi</td>
-        <td>There</td>
-    </tr>
-</table>
 
-<center>
     <br><br><br><br>
 
 
@@ -19,16 +13,16 @@
         software by doing it and helping others do it.<br>
         Through this work we have come to value:<br>
 
-    </font>
+    </font></p>
 
 <p>
     <font size="+2"></font><font size="+3">Individuals and interactions </font><font size="+2">over processes and tools<br></font>
     <font size="+2"></font><font size="+3">Working software </font><font size="+2">over comprehensive documentation<br></font>
     <font size="+2"></font><font size="+3">Customer collaboration </font><font size="+2">over contract negotiation<br></font>
     <font size="+2"></font><font size="+3">Responding to change </font><font size="+2">over following a plan<br></font>
+</p>
 
 
-<p>
     <font size="+2">
         That is, while there is value in the items on<br>
         the right, we value the items on the left more.<br>
@@ -36,39 +30,41 @@
     </font>
 
     <br><br><br><br>
-<table cellpadding=15><tr align=center valign=top>
-    <td><font size="+2">
-    <td><font size="+2">
-        Kent Beck<br>
-        Mike Beedle<br>
-        Arie van Bennekum<br>
-        Alistair Cockburn<br>
-        Ward Cunningham<br>
-        Martin Fowler<br>
-    </font></td>
+    <table cellpadding="15">
+    <tr align="center" valign="top">
+        <td><font size="+2">
+            Kent Beck<br>
+            Mike Beedle<br>
+            Arie van Bennekum<br>
+            Alistair Cockburn<br>
+            Ward Cunningham<br>
+            Martin Fowler<br>
+        </font></td>
 
-    <td><font size="+2">
+        <td><font size="+2">
 
-        James Grenning<br>
-        Jim Highsmith<br>
-        Andrew Hunt<br>
-        Ron Jeffries<br>
-        Jon Kern<br>
-        Brian Marick<br>
-    </font></td>
+            James Grenning<br>
+            Jim Highsmith<br>
+            Andrew Hunt<br>
+            Ron Jeffries<br>
+            Jon Kern<br>
+            Brian Marick<br>
+        </font></td>
 
-    <td><font size="+2">
-        Robert C. Martin<br>
+        <td><font size="+2">
+            Robert C. Martin<br>
 
-        Steve Mellor<br>
-        Ken Schwaber<br>
-        Jeff Sutherland<br>
-        Dave Thomas<br>
-    </font></td>
-</tr></table>
+            Steve Mellor<br>
+            Ken Schwaber<br>
+            Jeff Sutherland<br>
+            Dave Thomas<br>
+        </font></td>
+    </tr>
+    </table>
+
 <br><br><br>
 
-<font size=1 color=gray>
+<font size="1" color="gray">
     &copy; 2001, the above authors<br>
     this declaration may be freely copied in any form, <br>
     but only in its entirety through this notice.
@@ -79,10 +75,10 @@
 
     <br><br>
     <font size="+2">
-        <a href=principles.html>Twelve Principles of Agile Software</a><br><br>
-        <a href=/display/index.html>View Signatories</a><br><br>
-        <a href=/authors.html>About the Authors</a><br>
-        <a href=/history.html>About the Manifesto</a><br>
+        <a href="principles.html">Twelve Principles of Agile Software</a><br><br>
+        <a href="display/index.html">View Signatories</a><br><br>
+        <a href="authors.html">About the Authors</a><br>
+        <a href="history.html">About the Manifesto</a><br>
 
     </font>
     <br><br>
