--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -2,5 +2,5 @@
 ---
 
 div {
-  background-image: url("/background.jpg");
+  background-image: url("https://hkniberg.github.io/manifestotest/background.jpg");
 }
