--- a/css/app.scss
+++ b/css/app.scss
@@ -1,10 +1,5 @@
 ---
 ---
 body {
-  background-image: url("/background.jpg");
-}
-
-h1 {
-  color: red;
-  background: blue;
+  background-image: url("https://hkniberg.github.io/manifestotest/background.jpg");
 }
